--- a/main.css
+++ b/main.css
@@ -99,10 +99,11 @@ body.right-rail-open .arrow {
     height: 100%;
     width: 10px;
     cursor: pointer;
+    z-index: 1000;
 }
 
 .right-rail {
-    background-color: turquoise;
+    background-color: #e1e8e8;
     z-index: 99999999;
     height: 100%;
     position: absolute;
@@ -111,7 +112,7 @@ body.right-rail-open .arrow {
     text-align: center;
     overflow: hidden;
     border-radius: 0px 5px 5px 0px;
-    border-right: 1px solid white;
+    border-right: 1px solid #999999;
 }
 
 section#SideRail {
@@ -119,10 +120,20 @@ section#SideRail {
     bottom: 0;
     top: 0;
     width: 100%;
+    overflow-y: auto;
 }
 
-#results li {
-    border-bottom: 1px solid #c3faff;
+.dark .right-rail {
+    background-color: rgba(27, 6, 78, 0.5);
+    border-right: 1px solid #b698fb;
+}
+
+.dark .arrow {
+    border-left-color: #b698fb;
+}
+
+.dark #results li {
+    border-bottom: 1px solid #b698fb;
     display: block;
     padding: 6px 8px;
     text-align: center;
@@ -130,25 +141,47 @@ section#SideRail {
     transition: 0.5s
 }
 
-#results li:hover {
-    background-color: rgba(82,197,186,0.43)
+.dark #results li:last-child {
+    border-bottom: none;
 }
 
-#results li:active {
-    background-color: rgba(82,197,186,0.78)
+.dark #results li:hover {
+    background-color: rgba(170, 133, 255, 0.3)
 }
 
-#results li .fvlist {
+.dark #results li .result-list {
     align-items: center;
     display: flex
 }
 
-#results li .fvthumb {
+.dark #results li .result-img {
     border-radius: 5px;
-    border: 1px solid #c3faff;
+    border: 1px solid #b698fb;
     display: inline-table;
     float: left;
-    height: 38px;
     margin-right: 5px;
-    width: 68px
+    width: 150px;
+    height: 80px;
+}
+
+.dark #SideRail,
+.dark #SideRail button {
+    background: rgba(27, 6, 78, 0.5);
+    border-color: #987fdb;
+    transition: .5s;
+    color: #c4aaff;
+    box-shadow: none;
+}
+
+.dark #SideRail button:hover {
+    background: rgba(27, 6, 78, 0.9);
+    border-color: #b698fb;
+}
+
+
+.dark #SideRail input {
+    background: rgba(27, 6, 78, 0.5);
+    border: 1px solid #987fdb;
+    color: #c4aaff;
+    border-radius: 5px;
 }
