--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@
     width: 0
 }
 
-body.right-rail-open .arrow {
+.right-rail-open .arrow {
     border-width: 4px 4px 4px 0;
     border-left-color: transparent;
     border-right-color: white
@@ -115,6 +115,39 @@ body.right-rail-open .arrow {
     border-right: 1px solid #999999;
 }
 
+#results li {
+    border-bottom: 1px solid #aaaaaa;
+    display: block;
+    padding: 6px 8px;
+    text-align: center;
+    text-decoration: none;
+    transition: 0.5s;
+    color: black;
+}
+
+#results li:last-child {
+    border-bottom: none;
+}
+
+#results li:hover {
+    background-color: rgba(132, 132, 132, 0.3)
+}
+
+#results li .result-list {
+    align-items: center;
+    display: flex
+}
+
+#results li .result-img {
+    border-radius: 5px;
+    border: 1px solid #999999;
+    display: inline-table;
+    float: left;
+    margin-right: 5px;
+    width: 150px;
+    height: 80px;
+}
+
 section#SideRail {
     position: absolute;
     bottom: 0;
@@ -123,22 +156,22 @@ section#SideRail {
     overflow-y: auto;
 }
 
+.dark .arrow {
+    border-left-color: #b698fb;
+}
+
+.dark .right-rail-open .arrow {
+    border-right-color: #b698fb;
+}
+
 .dark .right-rail {
     background-color: rgba(27, 6, 78, 0.5);
     border-right: 1px solid #b698fb;
 }
 
-.dark .arrow {
-    border-left-color: #b698fb;
-}
-
 .dark #results li {
     border-bottom: 1px solid #b698fb;
-    display: block;
-    padding: 6px 8px;
-    text-align: center;
-    text-decoration: none;
-    transition: 0.5s
+    color: #b698fb;
 }
 
 .dark #results li:last-child {
@@ -149,19 +182,8 @@ section#SideRail {
     background-color: rgba(170, 133, 255, 0.3)
 }
 
-.dark #results li .result-list {
-    align-items: center;
-    display: flex
-}
-
 .dark #results li .result-img {
-    border-radius: 5px;
     border: 1px solid #b698fb;
-    display: inline-table;
-    float: left;
-    margin-right: 5px;
-    width: 150px;
-    height: 80px;
 }
 
 .dark #SideRail,
