--- a/main.css
+++ b/main.css
@@ -31,9 +31,10 @@
     background-color: #e1e8e8;
     z-index: 99999999;
     height: 100%;
+    width: 400px;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -400px;
     text-align: center;
     overflow: hidden;
     border-radius: 0px 5px 5px 0px;
